# try-rag

./: .env  .gitignore  README.md  main.py  pyproject.toml
data/raw/: ko-20251231.html  nvda-20260125.html
prompts/: system_instruction.md
system_instructions/: chunking.md  query.md
