[project]
name = "try-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chardet>=7.4.3",
    "fastembed-gpu>=0.8.0",
    "html-to-markdown>=3.8.2",
    # "langchain-text-splitters>=1.1.2",
    "lxml>=6.1.1",
    "mdformat>=1.0.0",
    # "model2vec[distill]>=0.8.0",
    "ollama>=0.6.2",
    # "onnxruntime-gpu==1.26.0",
    "peft>=0.19.1",
    "pydantic-settings>=2.14.2",
    "qdrant-client>=1.18.0",
    "semchunk>=4.1.1",
    "sentence-transformers>=5.6.0",
    # "torch>=2.12.1",
    # "transformers>=5.12.1",
    "tqdm>=4.68.4",
    "types-lxml>=2026.2.16",
    "wcwidth>=0.8.2",
]
